[project]
name = "BakedbyJess"
version = "0.1.0"
description = ""
authors = [
    {name = "awollgarten", email = "awollgarten@posteo.net"},
]
dependencies = [
    "flask>=2.1.2",
    "python-dotenv>=0.20.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
testing = [
    "pytest>=7.1.2",
]
linting = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "mypy>=0.950",
    "flakeheaven>=0.11.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"


[tool.pdm.scripts]
start = "flask run -p 8080"
